fix: hero text spacing

--- a/style/style.css
+++ b/style/style.css
@@ -59,7 +59,8 @@ header button {
     font-size: 48px;
     font-weight:bolder;
     color: #F9FAF8;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    line-height: 35px;
 }
 
 .sub-text {
